# tex2beam

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
notebooks/: Demo.ipynb
pdf2beam/: README.md  main.py
tex2beam/: main.py  run_metrics.py  utils.py
tex2beam/classes/: latex_base.py  latex_presentation.py  latex_report.py
tex2beam/methods/: baseline.py  chatgpt.py  rag.py  two_step.py
tex2beam/metrics/: bert_score.py  noise.py  plotting.py  rouge_score.py  utils.py
